Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4726

Assert in ProxyClientTransaction::release with h2spec (4.3)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • HTTP/2
    • None

    Description

      After TS-4507, TS (--enable-debug) crash with h2spec (4.3)

      $ h2spec --version
      h2spec v1.4.0
      $ h2spec -k -t -h localhost -p 4443 -s 4.3
        4.3. Header Compression and Decompression
          × Sends invalid header block fragment
            - The endpoint MUST terminate the connection with a connection error of type COMPRESSION_ERROR.
              Expected: GOAWAY frame (ErrorCode: COMPRESSION_ERROR)
                        Connection close
                Actual: Test timeout
            Sends Dynamic Table Size Update (RFC 7541, 6.3)
       
      ERROR: Unable to connect to the target server (tls: DialWithDialer timed out)%
      

      Back Trace

      (gdb) bt
      #0  0x00007ffff237f5f7 in raise () from /lib64/libc.so.6
      #1  0x00007ffff2380ce8 in abort () from /lib64/libc.so.6
      #2  0x00007ffff4bf8497 in ink_abort (message_format=0x7ffff4c25c20 "%s:%d: failed assertion `%s`") at ink_error.cc:79
      #3  0x00007ffff4bf378b in _ink_assert (expression=0xa80880 "current_reader != NULL", file=0xa80720 "ProxyClientTransaction.cc", line=61) at ink_assert.cc:37
      #4  0x00000000005bc5bb in ProxyClientTransaction::release (this=0x7fffe67d9330, r=0x0) at ProxyClientTransaction.cc:61
      #5  0x000000000076418a in Http2Stream::do_io_close (this=0x7fffe67d9330) at Http2Stream.cc:271
      #6  0x0000000000765180 in Http2Stream::initiating_close (this=0x7fffe67d9330) at Http2Stream.cc:375
      #7  0x000000000075a524 in Http2ConnectionState::delete_stream (this=0x60b00001ea48, stream=0x7fffe67d9330) at Http2ConnectionState.cc:960
      #8  0x000000000075a2cc in Http2ConnectionState::cleanup_streams (this=0x60b00001ea48) at Http2ConnectionState.cc:939
      #9  0x00000000007590c3 in Http2ConnectionState::main_event_handler (this=0x60b00001ea48, event=2252, edata=0x0) at Http2ConnectionState.cc:798
      #10 0x0000000000532290 in Continuation::handleEvent (this=0x60b00001ea48, event=2252, data=0x0) at ../iocore/eventsystem/I_Continuation.h:153
      #11 0x000000000075def7 in Http2ConnectionState::send_goaway_frame (this=0x60b00001ea48, id=1, ec=HTTP2_ERROR_COMPRESSION_ERROR) at Http2ConnectionState.cc:1326
      #12 0x000000000075973a in Http2ConnectionState::main_event_handler (this=0x60b00001ea48, event=2253, edata=0x7fffeddae760) at Http2ConnectionState.cc:832
      #13 0x0000000000532290 in Continuation::handleEvent (this=0x60b00001ea48, event=2253, data=0x7fffeddae760) at ../iocore/eventsystem/I_Continuation.h:153
      #14 0x000000000074c7cf in send_connection_event (cont=0x60b00001ea48, event=2253, edata=0x7fffeddae760) at Http2ClientSession.cc:58
      #15 0x00000000007507b1 in Http2ClientSession::do_complete_frame_read (this=0x60b00001e800) at Http2ClientSession.cc:469
      #16 0x0000000000750b4f in Http2ClientSession::state_process_frame_read (this=0x60b00001e800, event=100, vio=0x60ae0001cc90, inside_frame=false) at Http2ClientSession.cc:501
      #17 0x000000000074f838 in Http2ClientSession::state_start_frame_read (this=0x60b00001e800, event=100, edata=0x60ae0001cc90) at Http2ClientSession.cc:393
      #18 0x000000000074ea7f in Http2ClientSession::main_event_handler (this=0x60b00001e800, event=100, edata=0x60ae0001cc90) at Http2ClientSession.cc:299
      #19 0x0000000000532290 in Continuation::handleEvent (this=0x60b00001e800, event=100, data=0x60ae0001cc90) at ../iocore/eventsystem/I_Continuation.h:153
      #20 0x00000000009edbf6 in read_signal_and_update (event=100, vc=0x60ae0001cb70) at UnixNetVConnection.cc:153
      #21 0x00000000009f430e in UnixNetVConnection::readSignalAndUpdate (this=0x60ae0001cb70, event=100) at UnixNetVConnection.cc:1036
      #22 0x00000000009bc80a in SSLNetVConnection::net_read_io (this=0x60ae0001cb70, nh=0x7ffff0901460, lthread=0x7ffff08fd800) at SSLNetVConnection.cc:579
      #23 0x00000000009dc629 in NetHandler::mainNetEvent (this=0x7ffff0901460, event=5, e=0x608e00006580) at UnixNet.cc:514
      #24 0x0000000000532290 in Continuation::handleEvent (this=0x7ffff0901460, event=5, data=0x608e00006580) at ../iocore/eventsystem/I_Continuation.h:153
      #25 0x0000000000a36335 in EThread::process_event (this=0x7ffff08fd800, e=0x608e00006580, calling_code=5) at UnixEThread.cc:148
      #26 0x0000000000a36fc5 in EThread::execute (this=0x7ffff08fd800) at UnixEThread.cc:275
      #27 0x0000000000a34b56 in spawn_thread_internal (a=0x600800015d50) at Thread.cc:84
      #28 0x00007ffff4e64ac8 in ?? () from /lib64/libasan.so.0
      #29 0x00007ffff349edc5 in start_thread () from /lib64/libpthread.so.0
      #30 0x00007ffff244028d in clone () from /lib64/libc.so.6
      

      Attachments

        Issue Links

          Activity

            People

              masaori Masaori Koshiba
              masaori Masaori Koshiba
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 40m
                  1h 40m