TS-4726: Remove unnecessary assert in ProxyClientTransaction::release